Name:                mmr-hammer
Version:             0.1
Synopsis:            Multimaster replication management tools.
License:             GPL
License-file:        LICENSE
Author:              Edward Z. Yang
Maintainer:          ezyang@mit.edu
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2

Executable mmr-hammer
    Main-is: mmr-hammer.hs
    Ghc-options: -Wall -fno-warn-missing-signatures
    Build-depends:
        LDAP >= 0.6.7 && < 0.7,
        containers >= 0.3 && < 0.5,
        directory >= 1.0 && < 1.2,
        filepath >= 1.1 && < 1.4,
        time >= 1.2 && < 1.5,
        network == 2.*,
        old-locale == 1.0.*,
        base == 4.*
